ImpressCMS ChangeLog

== Impresscms 1.1==

===2008-09-?? : 1.1 RC 1===
'''Added'''
* agree box before upgrading to make sure of a backup. (stranger)
* added password can't contain username to pass check in admin edit user form. (vaughan)
* default template form usable by core feature or any modules - system_default_form.html (malanciault)
* new function to list all fonts. (stranger)
* new function to generate pdfs. (stranger)

'''Improved'''
* Improved how we use rtl in system. (stranger/real_therplima)
* Moved captcha to classes + some configurations were updated. (stranger)
* Updated TCPDF to version 4.0.023. (stranger)
* Removed warnings for unhandled global attribut in icms.htmlpurifier.php
* Updated jscalendar to 1.15. (stranger)
* Time picker now works correctly with jalali. (stranger)

'''Fixed'''
* 2 errors with google meta tag and google analytics. (stranger)
* possible issue in modulesadmin/main.php (real_therplima/trabis)
* #2048746: SQL error when creating invites and system_customtags tables (Commerce)
* #2037989: Registration notification sent twice (real_therplima)
* bug with modules when calling editors. (stranger)
* bug "Cannot redeclare class XoopsFormCaptcha". (stranger)
* Language constants in IcmsModuleAbout feature (malanciault)
* bug with pdf generator. (stranger)
* bug Hidencontent doesn`t work with TinyMCE. (stranger)
* # 2090834: Customtag works not with TinyMCE (malanciault)
* # 2046097: RSS admin news no longer works  (malanciault)
* # 2046097: Upgrade script modified to update rss_local config with correct info (if value was not previously changed by user) (malanciault)
* #1969061: _AUTH_MSG_AUTH_METHOD = xoops. This message was not saying much to users so the word 'xoops' was changed to 'standard' login (malanciault)
* #1984939: Creating a new CustomTag: Undefined offset: 0 in file /kernel/icmspersistableobjecthandler.php line 262 (malanciault)