@@ -161,7 +161,7 @@ class MyTextSanitizer
 				$endlength = -intval($xoopsConfigPersona['last_chars_left']);
 				$middleurl = " ... ";
 				$chunked = (strlen($urlname) > $maxlength && preg_match('#^(https://|http://|ftp://|www\.)#is', $urlname)) ? substr_replace($urlname, $middleurl, $cutlength, $endlength) : $urlname;
-				$text = str_replace('>'.$urlname.'<', '>'.$chunked.'<', $text); 
+				$text = str_replace('>'.$urlname.'<', '>'.$chunked.'<', $text);
    			}
 			$text = substr($text, 1);
 			return($text);
@@ -385,7 +385,7 @@ class MyTextSanitizer
 		// ################# Preload Trigger beforeDisplayTarea ##############
 		global $icmsPreloadHandler;
 		$icmsPreloadHandler->triggerEvent('beforeDisplayTarea', array(&$text, $html, $smiley, $xcode, $image, $br));
-		
+
 		if($html != 1)
 		{
 			$text = $this->htmlSpecialChars($text);
@@ -419,7 +419,7 @@ class MyTextSanitizer
 		}
 		// ################# Preload Trigger afterDisplayTarea ##############
 		global $icmsPreloadHandler;
-		$icmsPreloadHandler->triggerEvent('afterDisplayTarea', array(&$text, $html, $smiley, $xcode, $image, $br));		
+		$icmsPreloadHandler->triggerEvent('afterDisplayTarea', array(&$text, $html, $smiley, $xcode, $image, $br));
 		return $text;
 	}
 
@@ -436,6 +436,10 @@ class MyTextSanitizer
 	**/
 	function &previewTarea($text, $html = 0, $smiley = 1, $xcode = 1, $image = 1, $br = 1, $config = 'preview')
 	{
+		// ################# Preload Trigger beforePreviewTarea ##############
+		global $icmsPreloadHandler;
+		$icmsPreloadHandler->triggerEvent('beforePreviewTarea', array(&$text, $html, $smiley, $xcode, $image, $br));
+
 		$text = $this->stripSlashesGPC($text);
 		if($html != 1)
 		{
@@ -468,7 +472,11 @@ class MyTextSanitizer
 		{
 			$text = $this->html_purifier($text, $config);
 		}
-			
+
+		// ################# Preload Trigger afterPreviewTarea ##############
+		global $icmsPreloadHandler;
+		$icmsPreloadHandler->triggerEvent('afterPreviewTarea', array(&$text, $html, $smiley, $xcode, $image, $br));
+
 		return $text;
 	}
 
