@@ -7,8 +7,9 @@ ImpressCMS ChangeLog
 * agree box before upgrading to make sure of a backup. (stranger)
 * added password can't contain username to pass check in admin edit user form. (vaughan)
 * default template form usable by core feature or any modules - system_default_form.html (malanciault)
-* new function to list all fonts. (stranger)
-* new function to generate pdfs. (stranger)
+* new function to list all fonts (stranger)
+* new function to generate pdfs (stranger)
+* implementing beforePreviewTarea and afterPreviewTarea preload events (malanciault)
 
 '''Improved'''
 * Improved how we use rtl in system. (stranger/real_therplima)
